add seo-able images (#1015)

--- a/playground/src/index.html
+++ b/playground/src/index.html
@@ -81,7 +81,7 @@
       content="The Playground is a full demo implementation of the Counterfactual stack, running live on Ropsten. It lets you create an account, use demo applications, and learn about how to use Counterfactual to build your own app."
     />
     <meta property="og:url" content="http://playground.counterfactual.com/" />
-    <meta property="og:image" content="/assets/icon/logo.svg" />
+    <meta property="og:image" content="/assets/icon/logo-banner.jpeg" />
 
     <meta name="twitter:card" content="summary" />
     <meta name="twitter:site" content="@statechannels" />
@@ -91,7 +91,7 @@
       name="twitter:description"
       content="The Playground is a full demo implementation of the Counterfactual stack, running live on Ropsten. It lets you create an account, use demo applications, and learn about how to use Counterfactual to build your own app."
     />
-    <meta name="twitter:image" content="/assets/icon/logo.svg" />
+    <meta name="twitter:image" content="/assets/icon/logo-square.jpeg" />
 
     <meta
       name="description"
