Updates to SEO stuff (#1026)

--- a/playground/src/index.html
+++ b/playground/src/index.html
@@ -74,27 +74,23 @@
     <link rel="icon" type="image/x-icon" href="/assets/icon/favicon.ico" />
     <link rel="manifest" href="/manifest.json" />
 
-    <meta property="og:image" content="/assets/social/linkedin.png" />
-    <meta property="og:image:width" content="700" />
-    <meta property="og:image:height" content="400" />
-
-    <meta property="og:image" content="/assets/social/facebook.png" />
+    <meta property="og:image" content="https://playground-staging.counterfactual.com/assets/social/facebook.png" />
     <meta property="og:image:width" content="1200" />
     <meta property="og:image:height" content="628" />
 
     <meta property="og:title" content="State Channels Playground" />
     <meta property="og:type" content="website" />
-    <meta property="og:description" content="A demo of state channels on Ethereum built using Counterfactual. Dapps with no fees and instant response times." />
+    <meta property="og:description" content="A demo of state channels on Ethereum. Dapps with no fees and instant response times." />
     <meta property="og:url" content="http://playground.counterfactual.com/" />
 
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:site" content="@statechannels" />
     <meta name="twitter:creator" content="@statechannels" />
     <meta name="twitter:title" content="Counterfactual Playground" />
-    <meta name="twitter:description" content="A demo of state channels on Ethereum built using Counterfactual. Dapps with no fees and instant response times." />
-    <meta name="twitter:image" content="/assets/social/twitter.png" />
+    <meta name="twitter:description" content="A demo of state channels on Ethereum. Dapps with no fees and instant response times." />
+    <meta name="twitter:image" content="https://playground-staging.counterfactual.com/assets/social/twitter.png" />
 
-    <meta name="description" content="A demo of state channels on Ethereum built using Counterfactual. Dapps with no fees and instant response times." />
+    <meta name="description" content="A demo of state channels on Ethereum. Dapps with no fees and instant response times." />
   </head>
   <body>
     <app-root></app-root>
