--- a/playground/src/index.html
+++ b/playground/src/index.html
@@ -74,7 +74,9 @@
     <link rel="icon" type="image/x-icon" href="/assets/icon/favicon.ico" />
     <link rel="manifest" href="/manifest.json" />
 
-    <meta property="og:image" content="https://playground-staging.counterfactual.com/assets/social/facebook.png" />
+    <meta property="og:image" content="http://playground-staging.counterfactual.com/assets/social/facebook.png" />
+    <meta property="og:secure_url" content="https://playground-staging.counterfactual.com/assets/social/facebook.png" />
+    <meta property="og:image:type" content="image/png" />
     <meta property="og:image:width" content="1200" />
     <meta property="og:image:height" content="628" />
 
@@ -88,7 +90,7 @@
     <meta name="twitter:creator" content="@statechannels" />
     <meta name="twitter:title" content="Counterfactual Playground" />
     <meta name="twitter:description" content="A demo of state channels on Ethereum. Dapps with no fees and instant response times." />
-    <meta name="twitter:image" content="https://playground-staging.counterfactual.com/assets/social/twitter.png" />
+    <meta name="twitter:image" content="http://playground-staging.counterfactual.com/assets/social/twitter.png" />
 
     <meta name="description" content="A demo of state channels on Ethereum. Dapps with no fees and instant response times." />
   </head>
