[node] Fix exports (#1402)
* Fix loglevel usage

* Fix remaining exports

* Increase CI timeout

--- a/playground/src/index.html
+++ b/playground/src/index.html
@@ -24,6 +24,7 @@
   -->
     <script src="https://www.gstatic.com/firebasejs/5.5.3/firebase.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/node-uuid/1.4.8/uuid.js"></script>
+    <script src="https://unpkg.com/loglevel@1.6.1/dist/loglevel.min.js"></script>
     <script
       src="https://browser.sentry-cdn.com/4.5.3/bundle.min.js"
       crossorigin="anonymous"
