[node] Postgres storage service implementation (#1393)
* Postgres storage service

* Add template string package

* Nullify pg exports

* Refactor for typeorm

* Postgres service

* Add proper typing

* Remove package

* Yarn update

* Workaround for property initialization issues: https://github.com/typeorm/typeorm/issues/2936

* Remove allowDelete check

* Allow undefined return

* Add comment

* Fix lint issue

* Fix failing tests

--- a/playground/src/index.html
+++ b/playground/src/index.html
@@ -40,6 +40,10 @@
       constants = ethers.constants;
       providers = ethers.providers;
       database = firebase.database;
+      // nullify these as they're expected as globals for the node
+      // but aren't used browserside
+      pg = null;
+      SQL = null;
     </script>
 
     <script>
