[cf-wallet] initial implementation (#1608)
* reimplement cf-wallet using the current node api

* implement cf-wallet.js in playground ui

* get registration and deposit to work

* lint

* cleanup

* implement joel's improvments

* test bump

--- a/playground/src/index.html
+++ b/playground/src/index.html
@@ -64,6 +64,7 @@
     <script asynt src="https://cdnjs.cloudflare.com/ajax/libs/autotrack/2.4.1/autotrack.js"></script>
 
     <script src="/assets/cf.js"></script>
+    <script src="/assets/cf-wallet.js"></script>
 
     <script>
       cfjs = cf;
